Code clean-up - formatting. No functional change.