@@ -82,72 +82,51 @@ import org.apache.tomcat.util.res.StringManager;
 
 /**
  * Minimal tomcat starter for embedding/unit tests.
- *
  * <p>
- * Tomcat supports multiple styles of configuration and
- * startup - the most common and stable is server.xml-based,
+ * Tomcat supports multiple styles of configuration and startup - the most common and stable is server.xml-based,
  * implemented in org.apache.catalina.startup.Bootstrap.
- *
  * <p>
  * This class is for use in apps that embed tomcat.
- *
  * <p>
  * Requirements:
  * <ul>
- *   <li>all tomcat classes and possibly servlets are in the classpath.
- *       (for example all is in one big jar, or in eclipse CP, or in
- *        any other combination)</li>
- *
- *   <li>we need one temporary directory for work files</li>
- *
- *   <li>no config file is required. This class provides methods to
- *       use if you have a webapp with a web.xml file, but it is
- *       optional - you can use your own servlets.</li>
+ * <li>all tomcat classes and possibly servlets are in the classpath. (for example all is in one big jar, or in eclipse
+ * CP, or in any other combination)</li>
+ * <li>we need one temporary directory for work files</li>
+ * <li>no config file is required. This class provides methods to use if you have a webapp with a web.xml file, but it
+ * is optional - you can use your own servlets.</li>
  * </ul>
- *
  * <p>
- * There are a variety of 'add' methods to configure servlets and webapps. These
- * methods, by default, create a simple in-memory security realm and apply it.
- * If you need more complex security processing, you can define a subclass of
+ * There are a variety of 'add' methods to configure servlets and webapps. These methods, by default, create a simple
+ * in-memory security realm and apply it. If you need more complex security processing, you can define a subclass of
  * this class.
- *
  * <p>
- * This class provides a set of convenience methods for configuring web
- * application contexts; all overloads of the method <code>addWebapp()</code>.
- * These methods are equivalent to adding a web application to the Host's
- * appBase (normally the webapps directory). These methods create a Context,
- * configure it with the equivalent of the defaults provided by
- * <code>conf/web.xml</code> (see {@link #initWebappDefaults(String)} for
- * details) and add the Context to a Host. These methods do not use a global
- * default web.xml; rather, they add a {@link LifecycleListener} to configure
- * the defaults. Any WEB-INF/web.xml and META-INF/context.xml packaged with the
- * application will be processed normally. Normal web fragment and
- * {@link javax.servlet.ServletContainerInitializer} processing will be applied.
- *
+ * This class provides a set of convenience methods for configuring web application contexts; all overloads of the
+ * method <code>addWebapp()</code>. These methods are equivalent to adding a web application to the Host's appBase
+ * (normally the webapps directory). These methods create a Context, configure it with the equivalent of the defaults
+ * provided by <code>conf/web.xml</code> (see {@link #initWebappDefaults(String)} for details) and add the Context to a
+ * Host. These methods do not use a global default web.xml; rather, they add a {@link LifecycleListener} to configure
+ * the defaults. Any WEB-INF/web.xml and META-INF/context.xml packaged with the application will be processed normally.
+ * Normal web fragment and {@link javax.servlet.ServletContainerInitializer} processing will be applied.
  * <p>
- * In complex cases, you may prefer to use the ordinary Tomcat API to create
- * webapp contexts; for example, you might need to install a custom Loader
- * before the call to {@link Host#addChild(Container)}. To replicate the basic
- * behavior of the <code>addWebapp</code> methods, you may want to call two
- * methods of this class: {@link #noDefaultWebXmlPath()} and
- * {@link #getDefaultWebXmlListener()}.
- *
+ * In complex cases, you may prefer to use the ordinary Tomcat API to create webapp contexts; for example, you might
+ * need to install a custom Loader before the call to {@link Host#addChild(Container)}. To replicate the basic behavior
+ * of the <code>addWebapp</code> methods, you may want to call two methods of this class: {@link #noDefaultWebXmlPath()}
+ * and {@link #getDefaultWebXmlListener()}.
  * <p>
- * {@link #getDefaultWebXmlListener()} returns a {@link LifecycleListener} that
- * adds the standard DefaultServlet, JSP processing, and welcome files. If you
- * add this listener, you must prevent Tomcat from applying any standard global
+ * {@link #getDefaultWebXmlListener()} returns a {@link LifecycleListener} that adds the standard DefaultServlet, JSP
+ * processing, and welcome files. If you add this listener, you must prevent Tomcat from applying any standard global
  * web.xml with ...
- *
  * <p>
- * {@link #noDefaultWebXmlPath()} returns a dummy pathname to configure to
- * prevent {@link ContextConfig} from trying to apply a global web.xml file.
- *
+ * {@link #noDefaultWebXmlPath()} returns a dummy pathname to configure to prevent {@link ContextConfig} from trying to
+ * apply a global web.xml file.
  * <p>
- * This class provides a main() and few simple CLI arguments,
- * see setters for doc. It can be used for simple tests and
+ * This class provides a main() and few simple CLI arguments, see setters for doc. It can be used for simple tests and
  * demo.
  *
- * @see <a href="https://gitbox.apache.org/repos/asf?p=tomcat.git;a=blob;f=test/org/apache/catalina/startup/TestTomcat.java">TestTomcat</a>
+ * @see <a href=
+ *          "https://gitbox.apache.org/repos/asf?p=tomcat.git;a=blob;f=test/org/apache/catalina/startup/TestTomcat.java">TestTomcat</a>
+ *
  * @author Costin Manolache
  */
 public class Tomcat {
@@ -159,7 +138,7 @@ public class Tomcat {
     // after Loggers are configured but before they are used. The purpose of
     // this Map is to retain strong references to explicitly configured loggers
     // so that configuration is not lost.
-    private final Map<String, Logger> pinnedLoggers = new HashMap<>();
+    private final Map<String,Logger> pinnedLoggers = new HashMap<>();
 
     protected Server server;
 
@@ -168,9 +147,9 @@ public class Tomcat {
     protected String basedir;
     protected boolean defaultConnectorCreated = false;
 
-    private final Map<String, String> userPass = new HashMap<>();
-    private final Map<String, List<String>> userRoles = new HashMap<>();
-    private final Map<String, Principal> userPrincipals = new HashMap<>();
+    private final Map<String,String> userPass = new HashMap<>();
+    private final Map<String,List<String>> userRoles = new HashMap<>();
+    private final Map<String,Principal> userPrincipals = new HashMap<>();
 
     private boolean addDefaultWebXmlToWebapp = true;
 
@@ -179,30 +158,26 @@ public class Tomcat {
     }
 
     /**
-     * Tomcat needs a directory for temp files. This should be the
-     * first method called.
-     *
+     * Tomcat needs a directory for temp files. This should be the first method called.
      * <p>
      * By default, if this method is not called, we use:
      * <ul>
-     *  <li>system properties - catalina.base, catalina.home</li>
-     *  <li>[user.dir]/tomcat.$PORT</li>
+     * <li>system properties - catalina.base, catalina.home</li>
+     * <li>[user.dir]/tomcat.$PORT</li>
      * </ul>
      * (/tmp doesn't seem a good choice for security).
-     *
      * <p>
      * TODO: disable work dir if not needed ( no jsp, etc ).
      *
-     * @param basedir The Tomcat base folder on which all others
-     *  will be derived
+     * @param basedir The Tomcat base folder on which all others will be derived
      */
     public void setBaseDir(String basedir) {
         this.basedir = basedir;
     }
 
     /**
-     * Set the port for the default connector. Must
-     * be called before start().
+     * Set the port for the default connector. Must be called before start().
+     *
      * @param port The port number
      */
     public void setPort(int port) {
@@ -210,8 +185,8 @@ public class Tomcat {
     }
 
     /**
-     * The the hostname of the default host, default is
-     * 'localhost'.
+     * The the hostname of the default host, default is 'localhost'.
+     *
      * @param s The default host name
      */
     public void setHostname(String s) {
@@ -220,19 +195,15 @@ public class Tomcat {
 
 
     /**
-     * This is equivalent to adding a web application to a Host's appBase
-     * (usually Tomcat's webapps directory). By default, the equivalent of the
-     * default web.xml will be applied to the web application (see
+     * This is equivalent to adding a web application to a Host's appBase (usually Tomcat's webapps directory). By
+     * default, the equivalent of the default web.xml will be applied to the web application (see
      * {@link #initWebappDefaults(String)}). This may be prevented by calling
-     * {@link #setAddDefaultWebXmlToWebapp(boolean)} with {@code false}. Any
-     * <code>WEB-INF/web.xml</code> and <code>META-INF/context.xml</code>
-     * packaged with the application will always be processed and normal web
-     * fragment and {@link javax.servlet.ServletContainerInitializer} processing
-     * will always be applied.
+     * {@link #setAddDefaultWebXmlToWebapp(boolean)} with {@code false}. Any <code>WEB-INF/web.xml</code> and
+     * <code>META-INF/context.xml</code> packaged with the application will always be processed and normal web fragment
+     * and {@link javax.servlet.ServletContainerInitializer} processing will always be applied.
      *
      * @param contextPath The context mapping to use, "" for root context.
-     * @param docBase     Base directory for the context, for static files. Must
-     *                        exist and be an absolute path.
+     * @param docBase     Base directory for the context, for static files. Must exist and be an absolute path.
      *
      * @return the deployed context
      */
@@ -242,19 +213,17 @@ public class Tomcat {
 
 
     /**
-     * Copy the specified WAR file to the Host's appBase and then call
-     * {@link #addWebapp(String, String)} with the newly copied WAR. The WAR
-     * will <b>NOT</b> be removed from the Host's appBase when the Tomcat
-     * instance stops. Note that {@link ExpandWar} provides utility methods that
-     * may be used to delete the WAR and/or expanded directory if required.
+     * Copy the specified WAR file to the Host's appBase and then call {@link #addWebapp(String, String)} with the newly
+     * copied WAR. The WAR will <b>NOT</b> be removed from the Host's appBase when the Tomcat instance stops. Note that
+     * {@link ExpandWar} provides utility methods that may be used to delete the WAR and/or expanded directory if
+     * required.
      *
-     * @param contextPath   The context mapping to use, "" for root context.
-     * @param source        The location from which the WAR should be copied
+     * @param contextPath The context mapping to use, "" for root context.
+     * @param source      The location from which the WAR should be copied
      *
      * @return The deployed Context
      *
-     * @throws IOException If an I/O error occurs while copying the WAR file
-     *                     from the specified URL to the appBase
+     * @throws IOException If an I/O error occurs while copying the WAR file from the specified URL to the appBase
      */
     public Context addWebapp(String contextPath, URL source) throws IOException {
 
@@ -263,8 +232,8 @@ public class Tomcat {
         // Make sure a conflicting web application has not already been deployed
         Host h = getHost();
         if (h.findChild(cn.getName()) != null) {
-            throw new IllegalArgumentException(sm.getString("tomcat.addWebapp.conflictChild",
-                    source, contextPath, cn.getName()));
+            throw new IllegalArgumentException(
+                    sm.getString("tomcat.addWebapp.conflictChild", source, contextPath, cn.getName()));
         }
 
         // Make sure appBase does not contain a conflicting web application
@@ -272,19 +241,18 @@ public class Tomcat {
         File targetDir = new File(h.getAppBaseFile(), cn.getBaseName());
 
         if (targetWar.exists()) {
-            throw new IllegalArgumentException(sm.getString("tomcat.addWebapp.conflictFile",
-                    source, contextPath, targetWar.getAbsolutePath()));
+            throw new IllegalArgumentException(
+                    sm.getString("tomcat.addWebapp.conflictFile", source, contextPath, targetWar.getAbsolutePath()));
         }
         if (targetDir.exists()) {
-            throw new IllegalArgumentException(sm.getString("tomcat.addWebapp.conflictFile",
-                    source, contextPath, targetDir.getAbsolutePath()));
+            throw new IllegalArgumentException(
+                    sm.getString("tomcat.addWebapp.conflictFile", source, contextPath, targetDir.getAbsolutePath()));
         }
 
         // Should be good to copy the WAR now
         URLConnection uConn = source.openConnection();
 
-        try (InputStream is = uConn.getInputStream();
-                OutputStream os = new FileOutputStream(targetWar)) {
+        try (InputStream is = uConn.getInputStream(); OutputStream os = new FileOutputStream(targetWar)) {
             IOTools.flow(is, os);
         }
 
@@ -293,45 +261,36 @@ public class Tomcat {
 
 
     /**
-     * Add a context - programmatic mode, no default web.xml used. This means
-     * that there is no JSP support (no JSP servlet), no default servlet and
-     * no web socket support unless explicitly enabled via the programmatic
-     * interface. There is also no
-     * {@link javax.servlet.ServletContainerInitializer} processing and no
-     * annotation processing. If a
-     * {@link javax.servlet.ServletContainerInitializer} is added
-     * programmatically, there will still be no scanning for
+     * Add a context - programmatic mode, no default web.xml used. This means that there is no JSP support (no JSP
+     * servlet), no default servlet and no web socket support unless explicitly enabled via the programmatic interface.
+     * There is also no {@link javax.servlet.ServletContainerInitializer} processing and no annotation processing. If a
+     * {@link javax.servlet.ServletContainerInitializer} is added programmatically, there will still be no scanning for
      * {@link javax.servlet.annotation.HandlesTypes} matches.
-     *
      * <p>
      * API calls equivalent with web.xml:
      *
      * <pre>{@code
-     *  // context-param
-     *  ctx.addParameter("name", "value");
+     * // context-param
+     * ctx.addParameter("name", "value");
      *
      *
-     *  // error-page
-     *  ErrorPage ep = new ErrorPage();
-     *  ep.setErrorCode(500);
-     *  ep.setLocation("/error.html");
-     *  ctx.addErrorPage(ep);
+     * // error-page
+     * ErrorPage ep = new ErrorPage();
+     * ep.setErrorCode(500);
+     * ep.setLocation("/error.html");
+     * ctx.addErrorPage(ep);
      *
-     *  ctx.addMimeMapping("ext", "type");
+     * ctx.addMimeMapping("ext", "type");
      * }</pre>
-     *
-     *
      * <p>
-     * Note: If you reload the Context, all your configuration will be lost. If
-     * you need reload support, consider using a LifecycleListener to provide
-     * your configuration.
-     *
+     * Note: If you reload the Context, all your configuration will be lost. If you need reload support, consider using
+     * a LifecycleListener to provide your configuration.
      * <p>
      * TODO: add the rest
      *
      * @param contextPath The context mapping to use, "" for root context.
-     * @param docBase Base directory for the context, for static files.
-     *  Must exist, relative to the server home
+     * @param docBase     Base directory for the context, for static files. Must exist, relative to the server home
+     *
      * @return the deployed context
      */
     public Context addContext(String contextPath, String docBase) {
@@ -340,40 +299,36 @@ public class Tomcat {
 
     /**
      * Equivalent to &lt;servlet&gt;&lt;servlet-name&gt;&lt;servlet-class&gt;.
-     *
      * <p>
-     * In general it is better/faster to use the method that takes a
-     * Servlet as param - this one can be used if the servlet is not
-     * commonly used, and want to avoid loading all deps.
-     * ( for example: jsp servlet )
+     * In general it is better/faster to use the method that takes a Servlet as param - this one can be used if the
+     * servlet is not commonly used, and want to avoid loading all deps. ( for example: jsp servlet ) You can customize
+     * the returned servlet, ex:
      *
-     * You can customize the returned servlet, ex:
-     *  <pre>
-     *    wrapper.addInitParameter("name", "value");
-     *  </pre>
+     * <pre>
+     * wrapper.addInitParameter("name", "value");
+     * </pre>
      *
-     * @param contextPath   Context to add Servlet to
-     * @param servletName   Servlet name (used in mappings)
-     * @param servletClass  The class to be used for the Servlet
+     * @param contextPath  Context to add Servlet to
+     * @param servletName  Servlet name (used in mappings)
+     * @param servletClass The class to be used for the Servlet
+     *
      * @return The wrapper for the servlet
      */
-    public Wrapper addServlet(String contextPath,
-            String servletName,
-            String servletClass) {
+    public Wrapper addServlet(String contextPath, String servletName, String servletClass) {
         Container ctx = getHost().findChild(contextPath);
         return addServlet((Context) ctx, servletName, servletClass);
     }
 
     /**
      * Static version of {@link #addServlet(String, String, String)}
-     * @param ctx           Context to add Servlet to
-     * @param servletName   Servlet name (used in mappings)
-     * @param servletClass  The class to be used for the Servlet
+     *
+     * @param ctx          Context to add Servlet to
+     * @param servletName  Servlet name (used in mappings)
+     * @param servletClass The class to be used for the Servlet
+     *
      * @return The wrapper for the servlet
      */
-    public static Wrapper addServlet(Context ctx,
-                                      String servletName,
-                                      String servletClass) {
+    public static Wrapper addServlet(Context ctx, String servletName, String servletClass) {
         // will do class for name and set init params
         Wrapper sw = ctx.createWrapper();
         if (sw == null) {
@@ -387,30 +342,29 @@ public class Tomcat {
     }
 
     /**
-     * Add an existing Servlet to the context with no class.forName or
-     * initialisation.
-     * @param contextPath   Context to add Servlet to
-     * @param servletName   Servlet name (used in mappings)
-     * @param servlet       The Servlet to add
+     * Add an existing Servlet to the context with no class.forName or initialisation.
+     *
+     * @param contextPath Context to add Servlet to
+     * @param servletName Servlet name (used in mappings)
+     * @param servlet     The Servlet to add
+     *
      * @return The wrapper for the servlet
      */
-    public Wrapper addServlet(String contextPath,
-            String servletName,
-            Servlet servlet) {
+    public Wrapper addServlet(String contextPath, String servletName, Servlet servlet) {
         Container ctx = getHost().findChild(contextPath);
         return addServlet((Context) ctx, servletName, servlet);
     }
 
     /**
      * Static version of {@link #addServlet(String, String, Servlet)}.
-     * @param ctx           Context to add Servlet to
-     * @param servletName   Servlet name (used in mappings)
-     * @param servlet       The Servlet to add
+     *
+     * @param ctx         Context to add Servlet to
+     * @param servletName Servlet name (used in mappings)
+     * @param servlet     The Servlet to add
+     *
      * @return The wrapper for the servlet
      */
-    public static Wrapper addServlet(Context ctx,
-                                      String servletName,
-                                      Servlet servlet) {
+    public static Wrapper addServlet(Context ctx, String servletName, Servlet servlet) {
         // will do class for name and set init params
         Wrapper sw = new ExistingStandardWrapper(servlet);
         sw.setName(servletName);
@@ -455,8 +409,7 @@ public class Tomcat {
 
 
     /**
-     * Destroy the server. This object cannot be used once this method has been
-     * called.
+     * Destroy the server. This object cannot be used once this method has been called.
      *
      * @throws LifecycleException Destroy error
      */
@@ -467,8 +420,8 @@ public class Tomcat {
     }
 
     /**
-     * Add a user for the in-memory realm. All created apps use this
-     * by default, can be replaced using setRealm().
+     * Add a user for the in-memory realm. All created apps use this by default, can be replaced using setRealm().
+     *
      * @param user The user name
      * @param pass The password
      */
@@ -478,7 +431,9 @@ public class Tomcat {
 
     /**
      * Add a role to a user.
+     *
      * @see #addUser(String, String)
+     *
      * @param user The user name
      * @param role The role name
      */
@@ -495,12 +450,9 @@ public class Tomcat {
     // You can tune individual Tomcat objects, using internal APIs
 
     /**
-     * Get the default http connector. You can set more
-     * parameters - the port is already initialized.
-     *
+     * Get the default http connector. You can set more parameters - the port is already initialized.
      * <p>
-     * Alternatively, you can construct a Connector and set any params,
-     * then call addConnector(Connector)
+     * Alternatively, you can construct a Connector and set any params, then call addConnector(Connector)
      *
      * @return A connector object that can be customized
      */
@@ -540,8 +492,8 @@ public class Tomcat {
     }
 
     /**
-     * Get the service object. Can be used to add more
-     * connectors and few other global settings.
+     * Get the service object. Can be used to add more connectors and few other global settings.
+     *
      * @return The service
      */
     public Service getService() {
@@ -549,9 +501,8 @@ public class Tomcat {
     }
 
     /**
-     * Sets the current host - all future webapps will
-     * be added to this host. When tomcat starts, the
-     * host will be the default host.
+     * Sets the current host - all future webapps will be added to this host. When tomcat starts, the host will be the
+     * default host.
      *
      * @param host The current host
      */
@@ -583,6 +534,7 @@ public class Tomcat {
 
     /**
      * Access to the engine, for further customization.
+     *
      * @return The engine
      */
     public Engine getEngine() {
@@ -591,7 +543,7 @@ public class Tomcat {
             return service.getContainer();
         }
         Engine engine = new StandardEngine();
-        engine.setName( "Tomcat" );
+        engine.setName("Tomcat");
         engine.setDefaultHost(hostname);
         engine.setRealm(createDefaultRealm());
         service.setContainer(engine);
@@ -599,8 +551,8 @@ public class Tomcat {
     }
 
     /**
-     * Get the server object. You can add listeners and few more
-     * customizations. JNDI is disabled by default.
+     * Get the server object. You can add listeners and few more customizations. JNDI is disabled by default.
+     *
      * @return The Server
      */
     public Server getServer() {
@@ -615,7 +567,7 @@ public class Tomcat {
 
         initBaseDir();
 
-        server.setPort( -1 );
+        server.setPort(-1);
 
         Service service = new StandardService();
         service.setName("Tomcat");
@@ -624,11 +576,12 @@ public class Tomcat {
     }
 
     /**
-     * @param host The host in which the context will be deployed
+     * @param host        The host in which the context will be deployed
      * @param contextPath The context mapping to use, "" for root context.
-     * @param dir Base directory for the context, for static files.
-     *  Must exist, relative to the server home
+     * @param dir         Base directory for the context, for static files. Must exist, relative to the server home
+     *
      * @return the deployed context
+     *
      * @see #addContext(String, String)
      */
     public Context addContext(Host host, String contextPath, String dir) {
@@ -636,16 +589,16 @@ public class Tomcat {
     }
 
     /**
-     * @param host The host in which the context will be deployed
+     * @param host        The host in which the context will be deployed
      * @param contextPath The context mapping to use, "" for root context.
      * @param contextName The context name
-     * @param dir Base directory for the context, for static files.
-     *  Must exist, relative to the server home
+     * @param dir         Base directory for the context, for static files. Must exist, relative to the server home
+     *
      * @return the deployed context
+     *
      * @see #addContext(String, String)
      */
-    public Context addContext(Host host, String contextPath, String contextName,
-            String dir) {
+    public Context addContext(Host host, String contextPath, String contextName, String dir) {
         silence(host, contextName);
         Context ctx = createContext(host, contextPath);
         ctx.setName(contextName);
@@ -663,20 +616,16 @@ public class Tomcat {
 
 
     /**
-     * This is equivalent to adding a web application to a Host's appBase
-     * (usually Tomcat's webapps directory). By default, the equivalent of the
-     * default web.xml will be applied to the web application (see
+     * This is equivalent to adding a web application to a Host's appBase (usually Tomcat's webapps directory). By
+     * default, the equivalent of the default web.xml will be applied to the web application (see
      * {@link #initWebappDefaults(String)}). This may be prevented by calling
-     * {@link #setAddDefaultWebXmlToWebapp(boolean)} with {@code false}. Any
-     * <code>WEB-INF/web.xml</code> and <code>META-INF/context.xml</code>
-     * packaged with the application will always be processed and normal web
-     * fragment and {@link javax.servlet.ServletContainerInitializer} processing
-     * will always be applied.
+     * {@link #setAddDefaultWebXmlToWebapp(boolean)} with {@code false}. Any <code>WEB-INF/web.xml</code> and
+     * <code>META-INF/context.xml</code> packaged with the application will always be processed and normal web fragment
+     * and {@link javax.servlet.ServletContainerInitializer} processing will always be applied.
      *
      * @param host        The host in which the context will be deployed
      * @param contextPath The context mapping to use, "" for root context.
-     * @param docBase     Base directory for the context, for static files. Must
-     *                        exist and be an absolute path.
+     * @param docBase     Base directory for the context, for static files. Must exist and be an absolute path.
      *
      * @return the deployed context
      */
@@ -696,16 +645,16 @@ public class Tomcat {
 
 
     /**
-     * @param host The host in which the context will be deployed
+     * @param host        The host in which the context will be deployed
      * @param contextPath The context mapping to use, "" for root context.
-     * @param docBase Base directory for the context, for static files.
-     *  Must exist, relative to the server home
-     * @param config Custom context configurator helper
+     * @param docBase     Base directory for the context, for static files. Must exist, relative to the server home
+     * @param config      Custom context configurator helper
+     *
      * @return the deployed context
+     *
      * @see #addWebapp(String, String)
      *
-     * @deprecated Use {@link
-     *             #addWebapp(Host, String, String, LifecycleListener)} instead
+     * @deprecated Use {@link #addWebapp(Host, String, String, LifecycleListener)} instead
      */
     @Deprecated
     public Context addWebapp(Host host, String contextPath, String docBase, ContextConfig config) {
@@ -714,28 +663,22 @@ public class Tomcat {
 
 
     /**
-     * This is equivalent to adding a web application to a Host's appBase
-     * (usually Tomcat's webapps directory). By default, the equivalent of the
-     * default web.xml will be applied to the web application (see
+     * This is equivalent to adding a web application to a Host's appBase (usually Tomcat's webapps directory). By
+     * default, the equivalent of the default web.xml will be applied to the web application (see
      * {@link #initWebappDefaults(String)}). This may be prevented by calling
-     * {@link #setAddDefaultWebXmlToWebapp(boolean)} with {@code false}. Any
-     * <code>WEB-INF/web.xml</code> and <code>META-INF/context.xml</code>
-     * packaged with the application will always be processed and normal web
-     * fragment and {@link javax.servlet.ServletContainerInitializer} processing
-     * will always be applied.
+     * {@link #setAddDefaultWebXmlToWebapp(boolean)} with {@code false}. Any <code>WEB-INF/web.xml</code> and
+     * <code>META-INF/context.xml</code> packaged with the application will always be processed and normal web fragment
+     * and {@link javax.servlet.ServletContainerInitializer} processing will always be applied.
      *
      * @param host        The host in which the context will be deployed
      * @param contextPath The context mapping to use, "" for root context.
-     * @param docBase     Base directory for the context, for static files. Must
-     *                        exist and be an absolute path.
-     * @param config      Custom context configuration helper. Any configuration
-     *                        will be in addition to equivalent of the default
-     *                        web.xml configuration described above.
+     * @param docBase     Base directory for the context, for static files. Must exist and be an absolute path.
+     * @param config      Custom context configuration helper. Any configuration will be in addition to equivalent of
+     *                        the default web.xml configuration described above.
      *
      * @return the deployed context
      */
-    public Context addWebapp(Host host, String contextPath, String docBase,
-            LifecycleListener config) {
+    public Context addWebapp(Host host, String contextPath, String docBase, LifecycleListener config) {
 
         silence(host, contextPath);
 
@@ -766,11 +709,10 @@ public class Tomcat {
     }
 
     /**
-     * Return a listener that provides the required configuration items for JSP
-     * processing. From the standard Tomcat global web.xml. Pass this to
-     * {@link Context#addLifecycleListener(LifecycleListener)} and then pass the
-     * result of {@link #noDefaultWebXmlPath()} to
-     * {@link ContextConfig#setDefaultWebXml(String)}.
+     * Return a listener that provides the required configuration items for JSP processing. From the standard Tomcat
+     * global web.xml. Pass this to {@link Context#addLifecycleListener(LifecycleListener)} and then pass the result of
+     * {@link #noDefaultWebXmlPath()} to {@link ContextConfig#setDefaultWebXml(String)}.
+     *
      * @return a listener object that configures default JSP processing.
      */
     public LifecycleListener getDefaultWebXmlListener() {
@@ -778,9 +720,8 @@ public class Tomcat {
     }
 
     /**
-     * @return a pathname to pass to
-     * {@link ContextConfig#setDefaultWebXml(String)} when using
-     * {@link #getDefaultWebXmlListener()}.
+     * @return a pathname to pass to {@link ContextConfig#setDefaultWebXml(String)} when using
+     *             {@link #getDefaultWebXmlListener()}.
      */
     public String noDefaultWebXmlPath() {
         return Constants.NoDefaultWebXml;
@@ -789,10 +730,10 @@ public class Tomcat {
     // ---------- Helper methods and classes -------------------
 
     /**
-     * Create an in-memory realm. You can replace it for contexts with a real
-     * one. The Realm created here will be added to the Engine by default and
-     * may be replaced at the Engine level or over-ridden (as per normal Tomcat
-     * behaviour) at the Host or Context level.
+     * Create an in-memory realm. You can replace it for contexts with a real one. The Realm created here will be added
+     * to the Engine by default and may be replaced at the Engine level or over-ridden (as per normal Tomcat behaviour)
+     * at the Host or Context level.
+     *
      * @return a realm instance
      */
     protected Realm createDefaultRealm() {
@@ -814,8 +755,7 @@ public class Tomcat {
                 if (p == null) {
                     String pass = userPass.get(username);
                     if (pass != null) {
-                        p = new GenericPrincipal(username, pass,
-                                userRoles.get(username));
+                        p = new GenericPrincipal(username, pass, userRoles.get(username));
                         userPrincipals.put(username, p);
                     }
                 }
@@ -850,11 +790,9 @@ public class Tomcat {
                 throw new IllegalStateException(sm.getString("tomcat.baseDirMakeFail", baseFile));
             }
             /*
-             * If file permissions were going to be set on the newly created
-             * directory, this is the place to do it. However, even simple
-             * calls such as File.setReadable(boolean,boolean) behaves
-             * differently on different platforms. Therefore, setBaseDir
-             * documents that the user needs to do this.
+             * If file permissions were going to be set on the newly created directory, this is the place to do it.
+             * However, even simple calls such as File.setReadable(boolean,boolean) behaves differently on different
+             * platforms. Therefore, setBaseDir documents that the user needs to do this.
              */
         }
         try {
@@ -881,28 +819,22 @@ public class Tomcat {
             }
             server.setCatalinaHome(homeFile);
         }
-        System.setProperty(Globals.CATALINA_HOME_PROP,
-                server.getCatalinaHome().getPath());
+        System.setProperty(Globals.CATALINA_HOME_PROP, server.getCatalinaHome().getPath());
     }
 
-    static final String[] silences = new String[] {
-        "org.apache.coyote.http11.Http11NioProtocol",
-        "org.apache.catalina.core.StandardService",
-        "org.apache.catalina.core.StandardEngine",
-        "org.apache.catalina.startup.ContextConfig",
-        "org.apache.catalina.core.ApplicationContext",
-        "org.apache.catalina.core.AprLifecycleListener"
-    };
+    static final String[] silences =
+            new String[] { "org.apache.coyote.http11.Http11NioProtocol", "org.apache.catalina.core.StandardService",
+                    "org.apache.catalina.core.StandardEngine", "org.apache.catalina.startup.ContextConfig",
+                    "org.apache.catalina.core.ApplicationContext", "org.apache.catalina.core.AprLifecycleListener" };
 
     private boolean silent = false;
 
     /**
      * Controls if the loggers will be silenced or not.
-     * @param silent    <code>true</code> sets the log level to WARN for the
-     *                  loggers that log information on Tomcat start up. This
-     *                  prevents the usual startup information being logged.
-     *                  <code>false</code> sets the log level to the default
-     *                  level of INFO.
+     *
+     * @param silent <code>true</code> sets the log level to WARN for the loggers that log information on Tomcat start
+     *                   up. This prevents the usual startup information being logged. <code>false</code> sets the log
+     *                   level to the default level of INFO.
      */
     public void setSilent(boolean silent) {
         this.silent = silent;
@@ -930,19 +862,18 @@ public class Tomcat {
 
 
     /**
-     * By default, when calling addWebapp() to create a Context, the settings from
-     * from the default web.xml are added to the context.  Calling this method with
-     * a <code>false</code> value prior to calling addWebapp() allows to opt out of
-     * the default settings. In that event you will need to add the configurations
-     * yourself,  either programmatically or by using web.xml deployment descriptors.
-     * @param addDefaultWebXmlToWebapp <code>false</code> will prevent the class from
-     *                                 automatically adding the default settings when
-     *                                 calling addWebapp().
-     *                                 <code>true</code> will add the default settings
-     *                                 and is the default behavior.
+     * By default, when calling addWebapp() to create a Context, the settings from from the default web.xml are added to
+     * the context. Calling this method with a <code>false</code> value prior to calling addWebapp() allows to opt out
+     * of the default settings. In that event you will need to add the configurations yourself, either programmatically
+     * or by using web.xml deployment descriptors.
+     *
+     * @param addDefaultWebXmlToWebapp <code>false</code> will prevent the class from automatically adding the default
+     *                                     settings when calling addWebapp(). <code>true</code> will add the default
+     *                                     settings and is the default behavior.
+     *
      * @see #addWebapp(Host, String, String, LifecycleListener)
      */
-    public void setAddDefaultWebXmlToWebapp(boolean addDefaultWebXmlToWebapp){
+    public void setAddDefaultWebXmlToWebapp(boolean addDefaultWebXmlToWebapp) {
         this.addDefaultWebXmlToWebapp = addDefaultWebXmlToWebapp;
     }
 
@@ -976,15 +907,13 @@ public class Tomcat {
     }
 
     /**
-     * Create the configured {@link Context} for the given <code>host</code>.
-     * The default constructor of the class that was configured with
-     * {@link StandardHost#setContextClass(String)} will be used
+     * Create the configured {@link Context} for the given <code>host</code>. The default constructor of the class that
+     * was configured with {@link StandardHost#setContextClass(String)} will be used
      *
-     * @param host
-     *            host for which the {@link Context} should be created, or
-     *            <code>null</code> if default host should be used
-     * @param url
-     *            path of the webapp which should get the {@link Context}
+     * @param host host for which the {@link Context} should be created, or <code>null</code> if default host should be
+     *                 used
+     * @param url  path of the webapp which should get the {@link Context}
+     *
      * @return newly created {@link Context}
      */
     private Context createContext(Host host, String url) {
@@ -996,24 +925,17 @@ public class Tomcat {
             contextClass = ((StandardHost) host).getContextClass();
         }
         try {
-            return (Context) Class.forName(contextClass).getConstructor()
-                    .newInstance();
-        } catch (InstantiationException | IllegalAccessException
-                | IllegalArgumentException | InvocationTargetException
-                | NoSuchMethodException | SecurityException
-                | ClassNotFoundException e) {
+            return (Context) Class.forName(contextClass).getConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException |
+                InvocationTargetException | NoSuchMethodException | SecurityException | ClassNotFoundException e) {
             throw new IllegalArgumentException(
-                    "Can't instantiate context-class " + contextClass
-                            + " for host " + host + " and url "
-                            + url, e);
+                    "Can't instantiate context-class " + contextClass + " for host " + host + " and url " + url, e);
         }
     }
 
     /**
-     * Enables JNDI naming which is disabled by default. Server must implement
-     * {@link Lifecycle} in order for the {@link NamingContextListener} to be
-     * used.
-     *
+     * Enables JNDI naming which is disabled by default. Server must implement {@link Lifecycle} in order for the
+     * {@link NamingContextListener} to be used.
      */
     public void enableNaming() {
         // Make sure getServer() has been called as that is where naming is
@@ -1024,8 +946,7 @@ public class Tomcat {
         System.setProperty("catalina.useNaming", "true");
 
         String value = "org.apache.naming";
-        String oldValue =
-            System.getProperty(javax.naming.Context.URL_PKG_PREFIXES);
+        String oldValue = System.getProperty(javax.naming.Context.URL_PKG_PREFIXES);
         if (oldValue != null) {
             if (oldValue.contains(value)) {
                 value = oldValue;
@@ -1035,20 +956,17 @@ public class Tomcat {
         }
         System.setProperty(javax.naming.Context.URL_PKG_PREFIXES, value);
 
-        value = System.getProperty
-            (javax.naming.Context.INITIAL_CONTEXT_FACTORY);
+        value = System.getProperty(javax.naming.Context.INITIAL_CONTEXT_FACTORY);
         if (value == null) {
-            System.setProperty
-                (javax.naming.Context.INITIAL_CONTEXT_FACTORY,
-                 "org.apache.naming.java.javaURLContextFactory");
+            System.setProperty(javax.naming.Context.INITIAL_CONTEXT_FACTORY,
+                    "org.apache.naming.java.javaURLContextFactory");
         }
     }
 
 
     /**
-     * Provide default configuration for a context. This is broadly the
-     * programmatic equivalent of the default web.xml and provides the following
-     * features:
+     * Provide default configuration for a context. This is broadly the programmatic equivalent of the default web.xml
+     * and provides the following features:
      * <ul>
      * <li>Default servlet mapped to "/"</li>
      * <li>JSP servlet mapped to "*.jsp" and ""*.jspx"</li>
@@ -1056,10 +974,9 @@ public class Tomcat {
      * <li>MIME mappings (subset of those in conf/web.xml)</li>
      * <li>Welcome files</li>
      * </ul>
-     * TODO: Align the MIME mappings with conf/web.xml - possibly via a common
-     *       file.
+     * TODO: Align the MIME mappings with conf/web.xml - possibly via a common file.
      *
-     * @param contextPath   The path of the context to set the defaults for
+     * @param contextPath The path of the context to set the defaults for
      */
     public void initWebappDefaults(String contextPath) {
         Container ctx = getHost().findChild(contextPath);
@@ -1070,18 +987,16 @@ public class Tomcat {
     /**
      * Static version of {@link #initWebappDefaults(String)}.
      *
-     * @param ctx   The context to set the defaults for
+     * @param ctx The context to set the defaults for
      */
     public static void initWebappDefaults(Context ctx) {
         // Default servlet
-        Wrapper servlet = addServlet(
-                ctx, "default", "org.apache.catalina.servlets.DefaultServlet");
+        Wrapper servlet = addServlet(ctx, "default", "org.apache.catalina.servlets.DefaultServlet");
         servlet.setLoadOnStartup(1);
         servlet.setOverridable(true);
 
         // JSP servlet (by class name - to avoid loading all deps)
-        servlet = addServlet(
-                ctx, "jsp", "org.apache.jasper.servlet.JspServlet");
+        servlet = addServlet(ctx, "jsp", "org.apache.jasper.servlet.JspServlet");
         servlet.addInitParameter("fork", "false");
         servlet.setLoadOnStartup(3);
         servlet.setOverridable(true);
@@ -1107,14 +1022,13 @@ public class Tomcat {
     /**
      * Add the default MIME type mappings to the provide Context.
      *
-     * @param context The web application to which the default MIME type
-     *                mappings should be added.
+     * @param context The web application to which the default MIME type mappings should be added.
      */
     public static void addDefaultMimeTypeMappings(Context context) {
         Properties defaultMimeMappings = new Properties();
         try (InputStream is = Tomcat.class.getResourceAsStream("MimeTypeMappings.properties")) {
             defaultMimeMappings.load(is);
-            for (Map.Entry<Object, Object>  entry: defaultMimeMappings.entrySet()) {
+            for (Map.Entry<Object,Object> entry : defaultMimeMappings.entrySet()) {
                 context.addMimeMapping((String) entry.getKey(), (String) entry.getValue());
             }
         } catch (IOException e) {
@@ -1125,10 +1039,8 @@ public class Tomcat {
 
     /**
      * Fix startup sequence - required if you don't use web.xml.
-     *
      * <p>
-     * The start() method in context will set 'configured' to false - and
-     * expects a listener to set it back to true.
+     * The start() method in context will set 'configured' to false - and expects a listener to set it back to true.
      */
     public static class FixContextListener implements LifecycleListener {
 
@@ -1156,9 +1068,8 @@ public class Tomcat {
 
 
     /**
-     * Fix reload - required if reloading and using programmatic configuration.
-     * When a context is reloaded, any programmatic configuration is lost. This
-     * listener sets the equivalent of conf/web.xml when the context starts.
+     * Fix reload - required if reloading and using programmatic configuration. When a context is reloaded, any
+     * programmatic configuration is lost. This listener sets the equivalent of conf/web.xml when the context starts.
      */
     public static class DefaultWebXmlListener implements LifecycleListener {
         @Override
@@ -1171,15 +1082,14 @@ public class Tomcat {
 
 
     /**
-     * Helper class for wrapping existing servlets. This disables servlet
-     * lifecycle and normal reloading, but also reduces overhead and provide
-     * more direct control over the servlet.
+     * Helper class for wrapping existing servlets. This disables servlet lifecycle and normal reloading, but also
+     * reduces overhead and provide more direct control over the servlet.
      */
     public static class ExistingStandardWrapper extends StandardWrapper {
         private final Servlet existing;
 
         @SuppressWarnings("deprecation")
-        public ExistingStandardWrapper( Servlet existing ) {
+        public ExistingStandardWrapper(Servlet existing) {
             this.existing = existing;
             if (existing instanceof javax.servlet.SingleThreadModel) {
                 singleThreadModel = true;
@@ -1218,18 +1128,22 @@ public class Tomcat {
                 return existing;
             }
         }
+
         @Override
         public long getAvailable() {
             return 0;
         }
+
         @Override
         public boolean isUnavailable() {
             return false;
         }
+
         @Override
         public Servlet getServlet() {
             return existing;
         }
+
         @Override
         public String getServletClass() {
             return existing.getClass().getName();
